EmptyViewPod & SearchResultActivity ( no complete )

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <string name="msg_generic_no_data">No Data to Display</string>
 </resources>
